--- a/AnkiDroid/src/main/res/xml/preference_headers.xml
+++ b/AnkiDroid/src/main/res/xml/preference_headers.xml
@@ -56,8 +56,8 @@
     <!-- Keybinding preferences -->
     <Preference
         android:fragment="com.ichi2.anki.Preferences$ControlsSettingsFragment"
-        android:summary="@string/pref_cat_controls_summ"
-        android:title="@string/pref_cat_controls">
+        android:title="@string/pref_cat_controls"
+        android:key="@string/pref_controls_screen_key">
     </Preference>
 
     <!-- Advanced Preferences -->
