--- a/AnkiDroid/src/main/res/xml/preferences_controls.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_controls.xml
@@ -52,5 +52,5 @@
         app:interval="1"
         app:min="20" />
     <!-- This category is expanded in BindingPreference.setup -->
-    <PreferenceCategory android:title="@string/controls_main_category" android:key="key_map_category" />
+    <PreferenceCategory android:title="@string/controls_main_category" android:key="@string/controls_command_mapping_cat_key" />
 </PreferenceScreen>
