--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,DuplicateCrowdInStrings">
+    <string name="pref_summary_percentage">%s\%%</string>
     <string name="new_spread_preference">newSpread</string>
     <string name="day_offset_preference">dayOffset</string>
     <string name="learn_cutoff_preference">learnCutoff</string>
@@ -32,6 +33,10 @@
     <string name="pref_controls_screen_key">controlsScreen</string>
     <string name="pref_reset_languages_key">resetLanguages</string>
     <string name="controls_command_mapping_cat_key">key_map_category</string>
+    <string name="pref_swipe_sensitivity_key">swipeSensitivity</string>
+    <string name="pref_backup_max_key">backupMax</string>
+    <string name="pref_card_browser_font_scale_key">relativeCardBrowserFontSize</string>
+    <string name="pref_computation_precision_key">advanced_forecast_stats_compute_precision</string>
     <!-- Sync preferences -->
     <string name="pref_sync_screen_key">syncScreen</string>
     <string name="sync_account_key">syncAccount</string>
