--- a/AnkiDroid/src/main/res/values/10-preferences.xml
+++ b/AnkiDroid/src/main/res/values/10-preferences.xml
@@ -46,6 +46,11 @@
     <string name="about_title" maxLength="41">About AnkiDroid</string>
     <string name="about_version">Version: </string>
 
+    <!-- Search bar -->
+    <string name="pref_search_hint">Search...</string>
+    <string name="pref_search_no_results">No results</string>
+    <string name="pref_search_clear_history">Clear history</string>
+
     <!-- preferences.xml entries-->
     <string name="whiteboard_stroke_width" maxLength="41">Stroke width</string>
     <string name="use_input_tag" maxLength="41">Type answer into the card</string>
