--- a/AnkiDroid/src/main/res/xml/preference_headers.xml
+++ b/AnkiDroid/src/main/res/xml/preference_headers.xml
@@ -16,7 +16,16 @@
 -->
 
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:search="http://schemas.android.com/apk/res-auto">
+
+    <com.bytehamster.lib.preferencesearch.SearchPreference
+        android:key="@string/pref_search_key"
+        search:textHint="@string/pref_search_hint"
+        search:textNoResults="@string/pref_search_no_results"
+        search:textClearHistory="@string/pref_search_clear_history"/>
+
     <!--  General Preferences -->
     <Preference
         android:fragment="com.ichi2.anki.Preferences$GeneralSettingsFragment"
