--- a/AnkiDroid/src/main/res/xml/preferences_advanced.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_advanced.xml
@@ -23,6 +23,7 @@
 <!-- Advanced Preferences -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki"
+    xmlns:search="http://schemas.android.com/apk/com.bytehamster.lib.preferencesearch"
     xmlns:app1="http://schemas.android.com/apk/res-auto"
     android:title="@string/pref_cat_advanced"
     android:summary="@string/pref_cat_advanced_summ"
@@ -151,7 +152,8 @@
             <Preference
                 android:key="@string/pref_advanced_statistics_key"
                 android:title="@string/advanced_statistics_title"
-                android:fragment="com.ichi2.anki.Preferences$AdvancedStatisticsSettingsFragment" />
+                android:fragment="com.ichi2.anki.Preferences$AdvancedStatisticsSettingsFragment"
+                search:ignore="true"/>
             <SwitchPreference
                 android:defaultValue="false"
                 android:key="html_javascript_debugging"
