--- a/AnkiDroid/src/main/res/xml/preferences_advanced_statistics.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_advanced_statistics.xml
@@ -4,8 +4,8 @@
 <!-- Advanced Statistics Preferences -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki"
-    android:title="@string/advanced_statistics_title">
-
+    android:title="@string/advanced_statistics_title"
+    android:key="@string/advanced_statistics_screen_key">
     <SwitchPreference
         android:defaultValue="false"
         android:key="@string/pref_advanced_statistics_enabled_key"
