--- a/AnkiDroid/src/main/res/xml/preferences_appearance.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_appearance.xml
@@ -24,6 +24,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki"
     xmlns:app1="http://schemas.android.com/apk/res-auto"
+    xmlns:search="http://schemas.android.com/apk/com.bytehamster.lib.preferencesearch"
         android:title="@string/pref_cat_appearance"
         android:key="appearance_preference_group"
         android:summary="@string/pref_cat_appearance_summ">
@@ -42,7 +43,8 @@
             android:key="@string/day_theme_key"
             android:shouldDisableView="true"
             android:title="@string/day_theme"
-            app1:useSimpleSummaryProvider="true"/>
+            app1:useSimpleSummaryProvider="true"
+            search:ignore="true"/>
         <ListPreference
             android:defaultValue="3"
             android:entries="@array/night_theme_labels"
@@ -50,7 +52,8 @@
             android:key="@string/night_theme_key"
             android:shouldDisableView="true"
             android:title="@string/night_theme"
-            app1:useSimpleSummaryProvider="true"/>
+            app1:useSimpleSummaryProvider="true"
+            search:ignore="true"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/background_image_title" >
         <SwitchPreference
@@ -65,7 +68,8 @@
             android:summary="@string/custom_buttons_summary"
             android:title="@string/custom_buttons"
             android:key="@string/custom_buttons_link_preference"
-            android:fragment="com.ichi2.anki.Preferences$CustomButtonsSettingsFragment" />
+            android:fragment="com.ichi2.anki.Preferences$CustomButtonsSettingsFragment"
+            search:ignore="true"/>
         <ListPreference
             android:defaultValue="0"
             android:key="@string/fullscreen_mode_preference"
