--- a/AnkiDroid/src/main/res/xml/preferences_custom_sync_server.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_custom_sync_server.xml
@@ -3,7 +3,8 @@
 
 <!-- Advanced Preferences -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/custom_sync_server_title">
+    android:title="@string/custom_sync_server_title"
+    android:key="@string/custom_sync_screen_key">
     <SwitchPreference
         android:key="useCustomSyncServer"
         android:title="@string/custom_sync_server_enable_title"
