--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -54,6 +54,9 @@
     <string name="pref_notifications_blink_key">widgetBlink</string>
     <!-- Developer options -->
     <string name="pref_cat_dev_options" maxLength="41">Developer options</string>
+    <string name="dev_options_enabled_pref">Enable developer options</string>
+    <string name="dev_options_enabled_msg">Enabled developer options</string>
+    <string name="pref_dev_options_screen_key">devOptionsKey</string>
     <string name="pref_trigger_crash_key">trigger_crash_preference</string>
     <string name="pref_analytics_debug_key">analytics_debug_preference</string>
     <string name="pref_lock_database_key">debug_lock_database</string>
@@ -61,4 +64,6 @@
     <string name="pref_reset_onboarding_key">resetOnboarding</string>
     <string name="pref_rust_backend_key">useRustBackend</string>
     <string name="pref_scoped_storage_key">useScopedStorage</string>
+    <!-- About -->
+    <string name="about_screen_key">aboutScreen</string>
 </resources>
