--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -55,6 +55,7 @@
     <!-- Developer options -->
     <string name="pref_cat_dev_options" maxLength="41">Developer options</string>
     <string name="dev_options_enabled_pref">Enable developer options</string>
+    <string name="disable_dev_options">Disable developer options</string>
     <string name="dev_options_enabled_msg">Enabled developer options</string>
     <string name="pref_dev_options_screen_key">devOptionsKey</string>
     <string name="pref_trigger_crash_key">trigger_crash_preference</string>
@@ -64,6 +65,7 @@
     <string name="pref_reset_onboarding_key">resetOnboarding</string>
     <string name="pref_rust_backend_key">useRustBackend</string>
     <string name="pref_scoped_storage_key">useScopedStorage</string>
+    <string name="dev_options_enabled_by_user_key">devOptionsEnabledByUser</string>
     <!-- About -->
     <string name="about_screen_key">aboutScreen</string>
 </resources>
