--- a/AnkiDroid/src/main/res/xml/preferences_sync.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_sync.xml
@@ -15,7 +15,8 @@
   ~  this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/pref_cat_sync">
+    android:title="@string/pref_cat_sync"
+    android:key="@string/pref_sync_screen_key">
     <Preference
         android:dialogTitle="@string/sync_account"
         android:key="@string/sync_account_key"
@@ -37,7 +38,7 @@
         android:title="@string/automatic_sync_choice" />
     <SwitchPreference
         android:defaultValue="true"
-        android:key="showSyncStatusBadge"
+        android:key="@string/sync_status_badge_key"
         android:summary="@string/sync_status_badge_summ"
         android:title="@string/sync_status_badge" />
     <Preference
