--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -28,11 +28,21 @@
     <string name="force_full_sync_key">force_full_sync</string>
     <string name="sync_status_badge_key">showSyncStatusBadge</string>
     <string name="custom_sync_server_key">custom_sync_server_link</string>
-
+    <!-- Appearance -->
+    <string name="pref_appearance_screen_key">appearance_preference_group</string>
+    <string name="app_theme_key">appTheme</string>
+    <string name="day_theme_key">dayTheme</string>
+    <string name="night_theme_key">nightTheme</string>
+    <string name="pref_deck_picker_background_key">deckPickerBackground</string>
     <string name="custom_buttons_link_preference">custom_buttons_link</string>
     <string name="fullscreen_mode_preference">fullscreenMode</string>
     <string name="center_vertically_preference">centerVertically</string>
     <string name="show_estimates_preference">showEstimates</string>
+    <string name="pref_default_font_key">defaultFont</string>
+    <string name="pref_font_applicability_key">overrideFontBehavior</string>
+    <string name="pref_browser_and_editor_font_key">browserEditorFont</string>
+    <string name="pref_display_filenames_in_browser_key">card_browser_show_media_filenames</string>
+
     <string name="card_zoom_preference">cardZoom</string>
     <string name="image_zoom_preference">imageZoom</string>
     <string name="answer_button_size_preference">answerButtonSize</string>
@@ -40,9 +50,6 @@
     <string name="show_progress_preference">showProgress</string>
     <string name="show_eta_preference">showETA</string>
     <string name="show_large_answer_buttons_preference">showLargeAnswerButtons</string>
-    <string name="app_theme_key">appTheme</string>
-    <string name="day_theme_key">dayTheme</string>
-    <string name="night_theme_key">nightTheme</string>
     <string name="gestures_preference">gestures</string>
     <string name="gestures_corner_touch_preference">gestureCornerTouch</string>
     <string name="pref_accessibility_screen_key">accessibilityScreen</string>
