--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -42,6 +42,13 @@
     <string name="pref_font_applicability_key">overrideFontBehavior</string>
     <string name="pref_browser_and_editor_font_key">browserEditorFont</string>
     <string name="pref_display_filenames_in_browser_key">card_browser_show_media_filenames</string>
+    <!-- Controls -->
+    <string name="pref_controls_screen_key">controlsScreen</string>
+    <string name="gestures_preference">gestures</string>
+    <string name="gestures_corner_touch_preference">gestureCornerTouch</string>
+    <string name="nav_drawer_gesture_key">gestureFullScreenNavigationDrawer</string>
+    <string name="pref_swipe_sensitivity_key">swipeSensitivity</string>
+    <string name="controls_command_mapping_cat_key">key_map_category</string>
 
     <string name="card_zoom_preference">cardZoom</string>
     <string name="image_zoom_preference">imageZoom</string>
@@ -50,13 +57,8 @@
     <string name="show_progress_preference">showProgress</string>
     <string name="show_eta_preference">showETA</string>
     <string name="show_large_answer_buttons_preference">showLargeAnswerButtons</string>
-    <string name="gestures_preference">gestures</string>
-    <string name="gestures_corner_touch_preference">gestureCornerTouch</string>
     <string name="pref_accessibility_screen_key">accessibilityScreen</string>
-    <string name="pref_controls_screen_key">controlsScreen</string>
     <string name="pref_reset_languages_key">resetLanguages</string>
-    <string name="controls_command_mapping_cat_key">key_map_category</string>
-    <string name="pref_swipe_sensitivity_key">swipeSensitivity</string>
     <string name="pref_backup_max_key">backupMax</string>
     <string name="pref_card_browser_font_scale_key">relativeCardBrowserFontSize</string>
     <string name="pref_computation_precision_key">advanced_forecast_stats_compute_precision</string>
