--- a/AnkiDroid/src/main/res/xml/preferences_controls.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_controls.xml
@@ -37,7 +37,7 @@
         android:defaultValue="false"
         android:dependency="@string/gestures_preference"
         android:disableDependentsState="false"
-        android:key="gestureFullScreenNavigationDrawer"
+        android:key="@string/nav_drawer_gesture_key"
         android:summary="@string/gestures_fullscreen_nav_drawer_summary"
         android:title="@string/gestures_full_screen_nav_drawer" />
     <com.ichi2.preferences.SeekBarPreferenceCompat
