--- a/AnkiDroid/src/main/res/values/preferences.xml
+++ b/AnkiDroid/src/main/res/values/preferences.xml
@@ -49,15 +49,16 @@
     <string name="nav_drawer_gesture_key">gestureFullScreenNavigationDrawer</string>
     <string name="pref_swipe_sensitivity_key">swipeSensitivity</string>
     <string name="controls_command_mapping_cat_key">key_map_category</string>
-
+    <!-- Accessibility -->
+    <string name="pref_accessibility_screen_key">accessibilityScreen</string>
     <string name="card_zoom_preference">cardZoom</string>
     <string name="image_zoom_preference">imageZoom</string>
     <string name="answer_button_size_preference">answerButtonSize</string>
+    <string name="show_large_answer_buttons_preference">showLargeAnswerButtons</string>
+
     <string name="show_topbar_preference">showTopbar</string>
     <string name="show_progress_preference">showProgress</string>
     <string name="show_eta_preference">showETA</string>
-    <string name="show_large_answer_buttons_preference">showLargeAnswerButtons</string>
-    <string name="pref_accessibility_screen_key">accessibilityScreen</string>
     <string name="pref_reset_languages_key">resetLanguages</string>
     <string name="pref_backup_max_key">backupMax</string>
     <string name="pref_card_browser_font_scale_key">relativeCardBrowserFontSize</string>
