--- a/AnkiDroid/src/main/res/xml/preferences_advanced.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_advanced.xml
@@ -157,14 +157,16 @@
                 android:key="@string/html_javascript_debugging_key"
                 android:summary="@string/html_javascript_debugging_summ"
                 android:title="@string/html_javascript_debugging"/>
-            <!-- Title and summary are variable, handled in string:
-            card_browser_enable_external_context_menu -->
             <SwitchPreference
                 android:id="@+id/card_browser_external_context_menu"
+                android:title="@string/card_browser_context_menu_title"
+                android:summary="@string/card_browser_context_menu_summary"
                 android:defaultValue="false"
                 android:key="@string/card_browser_external_context_menu_key"/>
             <SwitchPreference
                 android:id="@+id/anki_card_external_context_menu"
+                android:title="@string/anki_card_context_menu_title"
+                android:summary="@string/anki_card_context_menu_summary"
                 android:defaultValue="true"
                 android:key="@string/anki_card_external_context_menu_key"/>
         </PreferenceCategory>
