--- a/AnkiDroid/src/main/res/values/theme_black.xml
+++ b/AnkiDroid/src/main/res/values/theme_black.xml
@@ -12,7 +12,7 @@
         <!-- Android colors -->
         <item name="colorPrimary">@color/theme_black_primary_dark</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/theme_black_accent</item>
+        <item name="colorAccent">#42A5F5</item>
         <item name="android:textColor">@color/theme_black_primary_text</item>
         <item name="android:textColorPrimary">@color/theme_black_primary_text</item>
         <item name="android:textColorSecondary">@color/theme_black_secondary_text</item>
