--- a/AnkiDroid/src/main/res/values/theme_light.xml
+++ b/AnkiDroid/src/main/res/values/theme_light.xml
@@ -27,12 +27,14 @@ APIs. It's visible when there aren't enough decks to fill the screen.
         <!-- Android colors -->
         <item name="colorPrimary">@color/theme_light_primary</item>
         <item name="colorPrimaryDark">@color/theme_light_primary_dark</item>
-        <item name="colorAccent">@color/theme_light_accent</item>
+        <item name="colorAccent">@color/material_light_blue_800</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/theme_light_primary_text</item>
         <item name="android:textColorSecondary">@color/theme_light_secondary_text</item>
         <item name="android:colorBackground">@android:color/white</item>
         <item name="android:windowBackground">@android:color/white</item>
+<!--        <item name="colorSurface">#55B3E5FC</item>-->
+        <item name="colorSurface">#E8EFF4</item>
         <!-- Navigation drawer theme -->
         <item name="navDrawerItemColor">@color/drawer_item_text_light</item>
         <item name="navDrawerItemBackgroundColor">@drawable/drawer_item_background_light</item>
