--- a/AnkiDroid/src/main/res/xml/preferences_general.xml
+++ b/AnkiDroid/src/main/res/xml/preferences_general.xml
@@ -25,7 +25,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:title="@string/pref_cat_general"
-    android:key="@string/pref_general_screen_key">
+    android:key="@string/pref_general_screen_key"
+    android:fragment="com.ichi2.anki.preferences.GeneralSettingsFragment">
         <ListPreference
             android:defaultValue="@string/empty_string"
             android:key="@string/pref_language_key"
@@ -56,12 +57,13 @@
                 android:entryValues="@array/add_to_cur_values"
                 android:key="@string/deck_for_new_cards_key"
                 android:title="@string/use_current"
-                app:useSimpleSummaryProvider="true"/>
+                app:useSimpleSummaryProvider="true" />
             <SwitchPreference
                 android:defaultValue="false"
                 android:key="@string/exit_via_double_tap_back_key"
                 android:summary="@string/exit_via_double_tap_back_summ"
-                android:title="@string/exit_via_double_tap_back" />
+                android:title="@string/exit_via_double_tap_back"
+                />
         </PreferenceCategory>
         <!-- Title and summary are variable, handled in string:
             card_browser_enable_external_context_menu -->
@@ -79,4 +81,8 @@
                 tools:title="‘Card Browser’ Menu"
                 tools:summary="Enables the ‘Card Browser’ context menu globally"/>
         </PreferenceCategory>
+        <com.ichi2.preferences.RelatedSettings
+            app:entriesNames="@array/advanced_summary_entries"
+            app:entriesFragments="@array/general_rel_settings_fragments">
+        </com.ichi2.preferences.RelatedSettings>
 </PreferenceScreen>
