--- a/AnkiDroid/src/main/res/menu/navigation_drawer.xml
+++ b/AnkiDroid/src/main/res/menu/navigation_drawer.xml
@@ -22,7 +22,7 @@
             android:title="@string/settings"/>
         <item
             android:id="@+id/nav_help"
-            android:icon="@drawable/ic_help_black"
+            android:icon="@drawable/ic_help_24"
             android:title="@string/help"/>
         <item
             android:id="@+id/support_ankidroid"
